# history/internal/server/docs/swagger.json
@@ -1,55 +1,12 @@
 {
-    "schemes": [
-        "http"
-    ],
     "swagger": "2.0",
     "info": {
-        "description": "Account API documentation",
-        "title": "Account",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8082",
-    "basePath": "/",
     "paths": {
-        "/api/Hospitals": {
-            "get": {
-                "description": "Retrieve a list of hospitals",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Hospitals"
-                ],
-                "summary": "Get list of hospitals",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Pagination start",
-                        "name": "from",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Number of records per page",
-                        "name": "count",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            },
+        "/api/History": {
             "post": {
-                "description": "Create a new hospital record",
+                "description": "Create visit record",
                 "consumes": [
                     "application/json"
                 ],
@@ -57,17 +14,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Hospitals"
+                    "History"
                 ],
-                "summary": "Create a new hospital",
+                "summary": "Create visit history and appointment",
                 "parameters": [
                     {
-                        "description": "Hospital object",
-                        "name": "hospital",
+                        "description": "History object",
+                        "name": "history",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.createUpdateHospitalRequestBody"
+                            "$ref": "#/definitions/server.createHistoryRequestBody"
                         }
                     },
                     {
@@ -81,9 +38,9 @@
                 "responses": {}
             }
         },
-        "/api/Hospitals/{id}": {
+        "/api/History/Account/{id}": {
             "get": {
-                "description": "Retrieve hospital information by hospital ID",
+                "description": "Retrieve records where {pacientId} = {id}",
                 "consumes": [
                     "application/json"
                 ],
@@ -91,13 +48,45 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Hospitals"
+                    "History"
                 ],
-                "summary": "Get hospital information by ID",
+                "summary": "Get visit history and appointments for an account",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Hospital ID",
+                        "description": "Patient ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/History/{id}": {
+            "get": {
+                "description": "Retrieve visit and appointment details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "History"
+                ],
+                "summary": "Get detailed information about a visit and appointments",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "History ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -113,7 +102,7 @@
                 "responses": {}
             },
             "put": {
-                "description": "Update hospital information",
+                "description": "Update visit record",
                 "consumes": [
                     "application/json"
                 ],
@@ -121,87 +110,25 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Hospitals"
+                    "History"
                 ],
-                "summary": "Update hospital information by ID",
+                "summary": "Update visit history and appointment",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Hospital ID",
+                        "description": "History ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Hospital object",
-                        "name": "hospital",
+                        "description": "Updated History object",
+                        "name": "history",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.createUpdateHospitalRequestBody"
+                            "$ref": "#/definitions/server.createHistoryRequestBody"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            },
-            "delete": {
-                "description": "Soft delete a hospital by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Hospitals"
-                ],
-                "summary": "Soft delete a hospital record",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Hospital ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/api/Hospitals/{id}/Rooms": {
-            "get": {
-                "description": "Retrieve a list of rooms in a hospital by hospital ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Hospitals"
-                ],
-                "summary": "Get rooms by hospital ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Hospital ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
                     },
                     {
                         "type": "string",
@@ -216,23 +143,26 @@
         }
     },
     "definitions": {
-        "server.createUpdateHospitalRequestBody": {
+        "server.createHistoryRequestBody": {
             "type": "object",
             "properties": {
-                "address": {
+                "data": {
                     "type": "string"
                 },
-                "contact_phone": {
+                "date": {
                     "type": "string"
                 },
-                "name": {
+                "doctor_id": {
                     "type": "string"
                 },
-                "rooms": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "hospital_id": {
+                    "type": "string"
+                },
+                "patient_id": {
+                    "type": "string"
+                },
+                "room": {
+                    "type": "string"
                 }
             }
         }
